--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^3.1.12",
+    "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-email": "^1.9.4",
     "react-icons": "^4.10.1",
     "react-signature-canvas": "^1.0.6"
   },
