--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@react-pdf/renderer": "^3.1.12",
     "axios": "^1.5.1",
+    "axios-cookiejar-support": "^4.0.7",
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
+    "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
